@@ -8,6 +8,7 @@ BUGS:
 
 OPENDNSSEC-332: Statistics on average sigs/sec not accurate
 OPENDNSSEC-437: Problem with invalid signatures on SOA RRset.
+OPENDNSSEC-104: Incorrect ZSK retire duration calculation.
 
 
 Limitations on Number of Zones
