@@ -7289,7 +7289,8 @@ int cmd_genkeys()
     /* Don't have to adjust the queue for shared keys as the prediction has already taken care of that.*/
 
     new_ksks = ksks_needed - ksks_in_queue;
-    /* fprintf(stderr, "keygen(ksk): new_ksks(%d) = ksks_needed(%d) - ksks_in_queue(%d)\n", new_ksks, ksks_needed, ksks_in_queue); */
+	printf("%d new KSK(s) (%d bits) need to be created for policy %s: keys_to_generate(%d) = keys_needed(%d) - keys_available(%d).\n", new_ksks, policy->ksk->bits, policy->name, new_ksks, ksks_needed, ksks_in_queue);
+
 
     /* Find out how many ZSKs are needed for the POLICY */
     status = KsmKeyPredict(policy->id, KSM_TYPE_ZSK, policy->shared_keys, interval, &zsks_needed, 0, zone_count);
@@ -7324,7 +7325,8 @@ int cmd_genkeys()
      }
 
     new_zsks = zsks_needed - zsks_in_queue;
-    /* fprintf(stderr, "keygen(zsk): new_zsks(%d) = zsks_needed(%d) - zsks_in_queue(%d)\n", new_zsks, zsks_needed, zsks_in_queue); */
+	printf("%d new ZSK(s) (%d bits) need to be created for policy %s: keys_to_generate(%d) = keys_needed(%d) - keys_available(%d).\n", new_zsks, policy->zsk->bits, policy->name, new_zsks, zsks_needed, zsks_in_queue);
+
 	
     /* Check capacity of HSM will not be exceeded */
 	if (policy->ksk->sm == policy->zsk->sm) {
@@ -8906,7 +8908,8 @@ int allocateKeysToZone(KSM_POLICY *policy, int key_type, int zone_id, uint16_t i
     StrFree(datetime);
     new_keys = keys_needed - (keys_in_queue - keys_pending_retirement);
 
-    /* fprintf(stderr, "comm(%d) %s: new_keys(%d) = keys_needed(%d) - (keys_in_queue(%d) - keys_pending_retirement(%d))\n", key_type, zone_name, new_keys, keys_needed, keys_in_queue, keys_pending_retirement); */
+    /* TODO: add check that new_keys is more than 0 */
+    /*log_msg(NULL, LOG_DEBUG, "%s key allocation for zone %s: keys_to_allocate(%d) = keys_needed(%d) - (keys_available(%d) - keys_pending_retirement(%d))\n", key_type == KSM_TYPE_KSK ? "KSK" : "ZSK", zone_name, new_keys, keys_needed, keys_in_queue, keys_pending_retirement); */
 
     /* Allocate keys */
     for (i=0 ; i < new_keys ; i++){
@@ -8915,11 +8918,13 @@ int allocateKeysToZone(KSM_POLICY *policy, int key_type, int zone_id, uint16_t i
             status = KsmKeyGetUnallocated(policy->id, policy->ksk->sm, policy->ksk->bits, policy->ksk->algorithm, zone_id, policy->keys->share_keys, &key_pair_id);
             if (status == -1 || key_pair_id == 0) {
                 if (man_key_gen == 0) {
-                    printf("Not enough keys to satisfy ksk policy for zone: %s", zone_name);
-                    printf("ods-enforcerd will create some more keys on its next run");
+                    printf("Not enough keys to satisfy ksk policy for zone: %s. keys_to_allocate(%d) = keys_needed(%d) - (keys_available(%d) - keys_pending_retirement(%d))\n", zone_name, new_keys, keys_needed, keys_in_queue, keys_pending_retirement);
+					printf("Tried to allocate %d keys, failed on allocating key number %d", new_keys, i+1);
+                   	printf("ods-enforcerd will create some more keys on its next run");
                 }
                 else {
-                    printf("Not enough keys to satisfy ksk policy for zone: %s", zone_name);
+                    printf("Not enough keys to satisfy ksk policy for zone: %s. keys_to_allocate(%d) = keys_needed(%d) - (keys_available(%d) - keys_pending_retirement(%d))\n", zone_name, new_keys, keys_needed, keys_in_queue, keys_pending_retirement);
+					printf("Tried to allocate %d keys, failed on allocating key number %d", new_keys, i+1);
                     printf("please use \"ods-ksmutil key generate\" to create some more keys.");
                 }
                 return 2;
@@ -8932,11 +8937,13 @@ int allocateKeysToZone(KSM_POLICY *policy, int key_type, int zone_id, uint16_t i
             status = KsmKeyGetUnallocated(policy->id, policy->zsk->sm, policy->zsk->bits, policy->zsk->algorithm, zone_id, policy->keys->share_keys, &key_pair_id);
             if (status == -1 || key_pair_id == 0) {
                 if (man_key_gen == 0) {
-                    printf("Not enough keys to satisfy zsk policy for zone: %s", zone_name);
+                    printf("Not enough keys to satisfy zsk policy for zone: %s. keys_to_allocate(%d) = keys_needed(%d) - (keys_available(%d) - keys_pending_retirement(%d))\n", zone_name, new_keys, keys_needed, keys_in_queue, keys_pending_retirement);
+					printf("Tried to allocate %d keys, failed on allocating key number %d", new_keys, i+1);
                     printf("ods-enforcerd will create some more keys on its next run");
                 }
                 else {
-                    printf("Not enough keys to satisfy zsk policy for zone: %s", zone_name);
+                    printf("Not enough keys to satisfy zsk policy for zone: %s. keys_to_allocate(%d) = keys_needed(%d) - (keys_available(%d) - keys_pending_retirement(%d))\n", zone_name, new_keys, keys_needed, keys_in_queue, keys_pending_retirement);
+					printf("Tried to allocate %d keys, failed on allocating key number %d", new_keys, i+1);
                     printf("please use \"ods-ksmutil key generate\" to create some more keys.");
                 }
                 return 2;
@@ -8954,8 +8961,8 @@ int allocateKeysToZone(KSM_POLICY *policy, int key_type, int zone_id, uint16_t i
             printf("KsmKeyGetUnallocated returned bad key_id %d for zone: %s; exiting...", key_pair_id, zone_name);
             exit(1);
         }
-
     }
+	printf("%s key allocation for zone %s: %d key(s) allocated\n", key_type == KSM_TYPE_KSK ? "KSK" : "ZSK", zone_name, new_keys);
 
     return status;
 }
