@@ -26,10 +26,13 @@ Bugfixes:
 * SUPPORT-127: Fix manpage sections.
 * OPENDNSSEC-481: libhsm: Fix an off-by-one length check error.
 * OPENDNSSEC-482: libhsm: Improved cleanup for C_FindObjects.
+* OPENDNSSEC-531: ods-ksmutil: ods-ksmutil: Exported value of 
+  <Parent><SOA><TTL> in policy could be wrong on MySQL
 * OPENDNSSEC-537: libhsm: Possible memory corruption in hsm_get_slot_id.
-* SUPPORT-86: Fixed build on OS X [OPENDNSSEC-512].
 * OPENDNSSEC-544: Signer Engine: Fix assertion error that happens on an IXFR
   request with EDNS.
+* OPENDNSSEC-546: enforcer & ods-ksmutil: Improve logging on key creation
+  and alloctaion.
 * OPENDNSSEC-560: Signer Engine: Don't crash when unsigned zone has no SOA.
 * Signer Engine: Fix a race condition when stopping daemon.
 
